# Snippets

./: .gitignore  .gitmodules
Logger/: CMakeLists.txt  Format.cpp  Format.hpp  Logger.cpp  Logger.hpp  LoggerFactory.cpp  LoggerFactory.hpp  LoggerSystem.hpp  LoggerTest.cpp  Priority.hpp  README  showcase.cpp
MultiThreader/: CMakeLists.txt  README.rst  multithreader.cpp
SDL_App/: CMakeLists.txt
SDL_App/src/: cAnimation.cpp  cAnimation.hpp  cApp.cpp  cApp.hpp  cApp_cleanup.cpp  cApp_event.cpp  cApp_init.cpp  cApp_loop.cpp  cApp_render.cpp  cArea.cpp  cArea.hpp  cCamera.cpp  cCamera.hpp  cEntity.cpp  cEntity.hpp  cEvent.cpp  cEvent.hpp  cMap.cpp  cMap.hpp  cSurface.cpp  cSurface.hpp  cTile.cpp  cTile.hpp  define.hpp
Singleton/: README  Singleton.hpp  showcase.cpp
Thread_Watcher/: CMakeLists.txt  README.rst  README.rtf  dz_watch.cpp  dz_watch.hpp  showcase.cpp
